--- a/source/_static/style.css
+++ b/source/_static/style.css
@@ -32,3 +32,25 @@ code {
         max-width: 1000px;
     }
 }
+
+div.topic {
+    background-color: rgba(255, 153, 255,0.2);
+    padding-left: 18px;
+    padding-top: 18px;
+    padding-bottom: 10px;
+    border-radius: 8px;
+    max-width:500px;
+}
+
+/*
+     for parsed literal block coming from ipynb                     
+     (note: i add :class: myliteral in the rst file to achieve this
+     http://www.w3schools.com/css/css_combinators.asp
+*/
+.myliteral pre {
+  /*font-size:12px;*/
+  /*font-size:22px;*/
+  color:black;
+  background-color:rgba(0,255,0,0.15);
+  /*font-family:"Incosolata","Consolata","Monaco",monospace; */
+}
